@@ -29,6 +29,7 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
  * Unify the styling of delete/destructive button styles across the admin interface (Paarth Agarwal)
  * Adopt new designs and unify the styling styles for `.button-secondary` buttons across the admin interface (Paarth Agarwal)
  * Refine designs for disabled buttons throughout the admin interface (Paarth Agarwal)
+ * Update expanding formset add buttons to use `button` not link for behaviour and remove support for disabled as a class (LB (Ben) Johnston)
 
 ### Bug fixes
 
@@ -48,6 +49,8 @@ When adding custom buttons using the `ModelAdmin` `ButtonHelper` class, custom b
 If using the hook `register_user_listing_buttons` to register buttons along with the undocumented `UserListingButton` class, the `button-secondary` class will no longer be included by default.
 
 Avoid using `disabled` as a class on `button` elements, instead use the [`disabled` attribute](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes/disabled) as support for this as a class may be removed in a future version of Wagtail and is not accessible.
+
+If using custom `expanding-formset` the add button will no longer support the `disabled` class but instead must require the `disabled` attribute to be set.
 
 The following button classes have been removed, none of which were being used within the admin but may have been used by custom code or packages:
 
